# pump-sensor-data-api

./: .gitignore  Dockerfile  Makefile  README.md  create_db.py  docker-compose.yml  main.py  pyproject.toml
src/infra/config/: __init__.py  db_config.py
src/infra/v1/: routes.py
src/infra/v1/datasources/: transform_data.py
src/infra/v1/models/: sensors_model.py
tests/: test_db_config.py  test_routes.py  test_transform_data.py
