[tool.poetry]
name = "pump-sensor-data-api"
version = "0.1.0"
description = ""
authors = ["Rodrigo Anderson <didier.rda@gmail.com>"]
readme = "README.md"
packages = [{include = "pump_sensor_data_api"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "0.101.0"
pandas = "^2.0.3"
uvicorn = "^0.23.2"
sqlalchemy = "^2.0.19"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
